Fixed media query text visibility issue
index.html
  - fixed misspelled "exuberance"
  - changed "play" to "compete" in reference to AS Roma

index.scss
  - when updating to resolve extraneous div & shifting "info-back"
    over to the `p`, I neglected to make the matching adjustment in
    the media query
  - reduced font size for `.link` to match the reduction of `p`

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -540,16 +540,13 @@ footer {
         .info-back {
           width: 18.59375rem;
           height: 18.59375rem;
+          font-weight: bold;
+          visibility: visible;
         }
 
         .logos {
           padding-top: 2rem;
           margin-bottom: 0;
-        }
-
-        p {
-          font-weight: bold;
-          visibility: visible;
         }
       }
     }
@@ -567,6 +564,10 @@ footer {
   }
 
   p {
+    font-size: 1rem;
+  }
+
+  .link {
     font-size: 1rem;
   }
 }
